--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.1.7",
+    "embla-carousel-auto-scroll": "^8.1.7",
     "embla-carousel-autoplay": "^8.1.6",
-    "embla-carousel-react": "^8.1.6",
+    "embla-carousel-react": "^8.1.7",
+    "lucide-react": "^0.414.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
