--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{ "source": "/:slug", "destination": "/" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
