--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.25.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
