--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.2.1",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.25.1",
+    "react-wrap-balancer": "^1.1.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
