Big update - social media added

--- a/package.json
+++ b/package.json
@@ -19,19 +19,24 @@
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "embla-carousel-auto-scroll": "^8.1.7",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.1.7",
+    "framer-motion": "^11.3.20",
     "lucide-react": "^0.414.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-html-props": "^2.0.9",
     "react-icons": "^5.2.1",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.25.1",
+    "react-twitter-embed": "^4.0.4",
     "react-wrap-balancer": "^1.1.1",
     "sonner": "^1.5.0",
+    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
