--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-facebook": "^9.0.12",
     "react-html-props": "^2.0.9",
     "react-icons": "^5.2.1",
     "react-qrcode-logo": "^3.0.0",
