--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -24,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "embla-carousel-auto-scroll": "^8.1.7",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.1.7",
@@ -35,6 +37,7 @@
     "react-facebook": "^9.0.12",
     "react-html-props": "^2.0.9",
     "react-icons": "^5.2.1",
+    "react-phone-number-input": "^3.4.5",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.25.1",
     "react-twitter-embed": "^4.0.4",
