--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-facebook": "^9.0.12",
+    "react-google-recaptcha": "^3.1.0",
     "react-html-props": "^2.0.9",
     "react-icons": "^5.2.1",
     "react-qrcode-logo": "^3.0.0",
@@ -51,6 +52,7 @@
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/scriptjs": "^0.0.5",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
